# xgboost-example

./: .gitignore  README.md
data/input/: data.csv
data/models/: 1.xgb
src/R/: README.md  predict.R
src/cpp/: .clang-format  CMakeLists.txt  README.md  vcpkg.json
src/cpp/cmake_superbuild/: CMakeLists.txt
src/cpp/src/: predict.cpp
src/python/: README.md  predict.py  requirements.txt
